# 3cb

./: .env.template  .gitignore  README.md  WORKSHOP.md  agent.py  config_schema.py  debug_task_env.py  docker_seccomp_profile_allowing_ADDR_NO_RANDOMIZE.json  environment.py  exceptions.py  harness.py  model.py  protocol.py  pyproject.toml  run_from_config.py  tinker.ipynb  web_navigation_flag.txt
alembic/: env.py
alembic/versions/: cb45e24e9472_.py
task_configs/: escalation_setuid.toml  evasion_debugger.toml  find_all_users.toml  impact_defacing.toml  initialaccess_mail_link.toml  null_writing.toml
